Changed some things

--- a/3DCardHover/index.html
+++ b/3DCardHover/index.html
@@ -7,26 +7,26 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
-        <div class="card">
-            <div class="box">
-                <div class="imgBx">
+    <section class="hover">
+        <div class="card1">
+            <div class="box11">
+                <div class="imgBx11">
                     <img src="./images/img1.jpg" alt="img1">
                 </div>
-                <div class="contentBx">
+                <div class="contentBx11">
                     <div>
-                        <h2>Post Title</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo eius nihil beatae omnis ad architecto cupiditate, aliquam assumenda eos soluta.</p>
+                        <h2>FC Tiigrid</h2>
+                        <p>Lahe klubi kus kunagi mängisin!</p>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="card">
-            <div class="box">
-                <div class="imgBx">
+        <div class="card1">
+            <div class="box1">
+                <div class="imgBx11">
                     <img src="./images/img2.jpg" alt="img1">
                 </div>
-                <div class="contentBx">
+                <div class="contentBx1">
                     <div>
                         <h2>Post Title</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo eius nihil beatae omnis ad architecto cupiditate, aliquam assumenda eos soluta.</p>
@@ -34,12 +34,12 @@
                 </div>
             </div>
         </div>
-        <div class="card">
-            <div class="box">
-                <div class="imgBx">
+        <div class="card1">
+            <div class="box1">
+                <div class="imgBx1">
                     <img src="./images/img3.jpg" alt="img1">
                 </div>
-                <div class="contentBx">
+                <div class="contentBx1">
                     <div>
                         <h2>Post Title</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo eius nihil beatae omnis ad architecto cupiditate, aliquam assumenda eos soluta.</p>
@@ -47,12 +47,12 @@
                 </div>
             </div>
         </div>
-        <div class="card">
-            <div class="box">
-                <div class="imgBx">
+        <div class="card1">
+            <div class="box1">
+                <div class="imgBx1">
                     <img src="./images/img4.jpg" alt="img1">
                 </div>
-                <div class="contentBx">
+                <div class="contentBx1">
                     <div>
                         <h2>Post Title</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo eius nihil beatae omnis ad architecto cupiditate, aliquam assumenda eos soluta.</p>
@@ -60,12 +60,12 @@
                 </div>
             </div>
         </div>
-        <div class="card">
-            <div class="box">
-                <div class="imgBx">
+        <div class="card1">
+            <div class="box1">
+                <div class="imgBx1">
                     <img src="./images/img5.jpg" alt="img1">
                 </div>
-                <div class="contentBx">
+                <div class="contentBx1">
                     <div>
                         <h2>Post Title</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo eius nihil beatae omnis ad architecto cupiditate, aliquam assumenda eos soluta.</p>
@@ -73,12 +73,12 @@
                 </div>
             </div>
         </div>
-        <div class="card">
-            <div class="box">
-                <div class="imgBx">
+        <div class="card1">
+            <div class="box1">
+                <div class="imgBx1">
                     <img src="./images/img6.jpg" alt="img1">
                 </div>
-                <div class="contentBx">
+                <div class="contentBx1">
                     <div>
                         <h2>Post Title</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo eius nihil beatae omnis ad architecto cupiditate, aliquam assumenda eos soluta.</p>
