Changes in old projects & created javascript Slider project

--- a/Color Game/index.html
+++ b/Color Game/index.html
@@ -13,6 +13,8 @@
 
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous">
 
+    <link rel="icon" href="https://www.musegain.com/widgets/social_share/images/color_wheel_dock_icon_by_andybaumgar-d3ezjgc_2x.png" sizes="32x32" type="image/png">
+
     <link rel="stylesheet" href="colorgame.css">
 
   </head>
