Completed slider mini-project

--- a/Slider/index.html
+++ b/Slider/index.html
@@ -18,6 +18,8 @@
             <button class="slider__button slider__button-next"><i class="fas fa-chevron-right"></i></button>
         </div>
     </div>
+
+    <script src="js/script.js"></script>
 </body>
 </html>
 
