Tried creating simple webpack and parcel apps

--- a/Slider/index.html
+++ b/Slider/index.html
@@ -18,6 +18,18 @@
             <button class="slider__button slider__button-next"><i class="fas fa-chevron-right"></i></button>
         </div>
     </div>
+    <a style="display:block;
+    	position:absolute;    
+    	z-index: 100;
+    	padding:20px;
+        position: fixed;
+        bottom: 20px;
+        left: 50%;
+        margin-left: -67px;
+        margin-bottom: 15px;background:#f00;/*#BE1D30*/;color:#fff;font-size:1.2em;border-radius:5px;font-weight:bold;"
+        href="/et/add">
+        LISA MÜÜK
+    </a>
 
     <script src="js/script.js"></script>
 </body>
